--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,9 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
     implementation "androidx.compose.runtime:runtime-livedata:1.4.3"
 
+    //coil
+    implementation("io.coil-kt:coil-compose:2.4.0")
+
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
