--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
     implementation "androidx.compose.runtime:runtime-livedata:1.4.3"
-
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1'
+    
     //coil
     implementation("io.coil-kt:coil-compose:2.4.0")
 
