--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,9 +59,14 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
     implementation "androidx.compose.runtime:runtime-livedata:1.4.3"
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1'
-    
+
     //coil
     implementation("io.coil-kt:coil-compose:2.4.0")
+
+    //koin
+    implementation "io.insert-koin:koin-core:3.3.2"
+    implementation "io.insert-koin:koin-android:3.3.2"
+    implementation "io.insert-koin:koin-androidx-compose:3.4.1"
 
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
